GNOME Bugzilla – Bug 731524
codecparsers: h264: fix quantization matrix conversion routine names
Last modified: 2014-06-12 09:07:33 UTC
Created attachment 278271 [details] [review] codecparsers: h264: fix quantization matrix conversion routine names Fix routine names for zigzag/raster scan order conversion routines for quantization matrices. This ought to use the gst_h264_quant_matrix_*() naming convention instead of gst_h264_video_quant_matrix_*(), which derived from the MPEG-2 function names. This is a new API (in 1.4) it'd be better to have consistent naming conventions with the rest of the gsth264parser. Thanks.
commit db887f05cafdae8588150daeaa71bf99cfa3c6a2 Author: Gwenole Beauchesne <gwenole.beauchesne@intel.com> Date: Wed Jun 11 15:11:40 2014 +0200 codecparsers: h264: fix quantization matrix conversion routine names. Fix routine names for zigzag/raster scan order conversion routines for quantization matrices. This ought to use the gst_h264_quant_matrix_*() naming convention instead of gst_h264_video_quant_matrix_*(), which derived from the MPEG-2 function names. https://bugzilla.gnome.org/show_bug.cgi?id=731524 Signed-off-by: Gwenole Beauchesne <gwenole.beauchesne@intel.com>